# data-science-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.__directory_name}}/: .gitignore  Makefile  README.md  config.py  mkdocs.yml  pyproject.toml  requirements-dev.txt
{{cookiecutter.__directory_name}}/docs/: README.md  reference.md
{{cookiecutter.__directory_name}}/docs/docs/: getting-started.md  index.md
{{cookiecutter.__directory_name}}/tests/: test_train_model.py
{{cookiecutter.__directory_name}}/{{cookiecutter.__package_name}}/: train_model.py
{{cookiecutter.__directory_name}}/{{cookiecutter.__package_name}}/data/: make_dataset.py
{{cookiecutter.repo_name}}/: .gitignore  .sqlfluff  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
{{cookiecutter.repo_name}}/.github/: pull_request_template.md
{{cookiecutter.repo_name}}/configs/: .env  default_settings.toml  settings.toml
{{cookiecutter.repo_name}}/docs/: mkdocs.yml
{{cookiecutter.repo_name}}/docs/docs/: reference.md
{{cookiecutter.repo_name}}/project_utils/: __init__.py  logger_config.py  utils.py
{{cookiecutter.repo_name}}/tests/data/: test_make_dataset.py
