{%- if cookiecutter.dependency_manager == "poetry" %}
[tool.poetry]
name = "{{ cookiecutter.__package_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }}"]
readme = "README.md"
packages = [
    { include = "{{ cookiecutter.__package_name }}" },
    { include = "project_utils" },
]

[tool.poetry.dependencies]
python = "{{ cookiecutter.compatible_python_versions }}"
dynaconf = "*"
python-dotenv = "*"
click = "*"
loguru = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = { version = "*", extras = ["python"] }
mkdocstrings =  { version = "*", extras = ["python"] }
mkdocs-material = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
{% endif %}
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = ["."]